<resources>
    <string name="app_name">Event Invitation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_msg">Welcome to Invite Maker</string>
    <string name="new_inv_btn_txt">New Invite</string>

    <!-- Fragment labels -->
    <string name="welcomeLabel">Welcome</string>
    <string name="inviteLabel">Create an Invite</string>
    <string name="layoutLabel">Invited</string>
    <string name="helpLabel">Help</string>
    <string name="calendarLabel">Calendar</string>
    <string name="aboutLabel">About</string>
    <string name="layoutOp1Label">Celebratory</string>
    <string name="layoutOp2Label">Spooky</string>
    <string name="layoutOp3Label">Snowy</string>
    <string name="fragmentSelectLabel">Design</string>

    <string name="icon_temp_title">Temp Title</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="help">Help</string>
    <string name="create_inv_txt">Create Event</string>
    <string name="event_name_txt">Name: </string>
    <string name="event_add_txt">Address: </string>
    <string name="event_time_txt">Time: </string>
    <string name="event_desc_txt">Description: </string>
    <string name="event_day_txt">Date: </string>
    <string name="event_start_txt">Time: From </string>
    <string name="event_end_txt">To </string>
    <string name="ok">OK</string>
    <string name="bday">Party!</string>
    <string name="timePrompt">When?</string>
    <string name="locationPrompt">Where?</string>
    <string name="descPrompt">What is Happening?</string>
    <string name="eventLocation">Place:</string>
    <string name="costumeTitle">Party!</string>
    <string name="christmasTitle">Party!</string>
    <string name="christmasDetails">Party Details</string>
    <string name="layoutSelect">Select A Layout</string>
    <string name="picSelect">Select A Picture</string>
    <string name="musicSelect">Select A Song</string>
    <string name="op1">Summer Style</string>
    <string name="op2">Spooky Style</string>
    <string name="op3">Snowy Style</string>
    <string name="op4">Celebratory Style</string>
    <string name="pic1">Summery Picture</string>
    <string name="pic2">Spooky Picture</string>
    <string name="pic3">Snowy Picture</string>
    <string name="pic4">Party Picture</string>
    <string name="music1">Birthday Music</string>
    <string name="music2">Festive Music</string>
    <string name="music3">Spooky Music</string>
    <string name="finish">Finish</string>


    <string-array name="year">
        <item>2023</item>
        <item>2024</item>
    </string-array>

    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="day">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="hour">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <string name="invite">You Are Invited!</string>
    <string name="title">Summer Celebration BBQ Party</string>
    <string name="detail">test </string>
    <string name="description">Party Image</string>
    <string name="addcalendar">Add To Calendar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Settings</string>
    <string name="upcoming">Upcoming Events:</string>
    <string name="clear">Clear All</string>



    <string name="help_about">About</string>
    <string name="about_desc">
        This event invitation app was made during our Mobile App Programming I course
        as our main project. This app allows you to create and customize the layout of
        an invitation. It allows tracks the upcoming events and the current invites you
        have made so far.
    </string>

    <!-- Strings for TextViews -->

    <string name="about_dev">Developers</string>
    <string name="dev_desc"></string>
    <string name="about_v">Version</string>
    <string name="v_desc">v1.0.1</string>
    <string name="send">Send</string>
    <string name="calfrag">Loading calendar...</string>
    <string name="intro">Introduction</string>
    <string name="started">Getting Started</string>
    <string name="create">Creating an Invitation</string>
    <string name="integrate">Integration with Google Calendar</string>

    <string name="introDesc">
        This is a simple event invitation app that allows you to
        create a customized invitation card varying based
        on what you would like to choose for the picture, the layout of the card, and
        the music you would like it to play.
    </string>
    <string name="startedDesc">
        To get started, simply open the app (which you already have if you\'re seeing this
        screen), and click on the "New Invite" button on the home screen.
    </string>
    <string name="createDesc">
        To create an invitation, type in where the event will take place, when it will happen, and what time it
        starts. Optionally, you can also tell the recipients what the event will be about in the description.
        Once finished, click on the \"OK\" button. You will now be on the \"Design\" screen. Choose a preferred layout, any
        of the listed pictures, and what song you would like the card to play. Once done, press finished and your
        card will be generated.
    </string>
    <string name="integrateDesc">
        To integrate this event with Google Calendar, press the \"Add To Calendar\" button. You will be directed to the
        Google Calendar app, from which you will be prompted with a screen that will have the fields already filled
        in with what you entered in the invitation app earlier. Press save, and your event will automatically
        be saved.
    </string>
</resources>