<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layoutOp1">


    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bday"
        android:textSize="50dp"
        android:background="@color/pink"
        android:textColor="@color/white"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/eventNameViewop1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name_txt"
        android:textSize="40dp"
        android:background="@color/offPink"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/summer"
        android:background="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventNameViewop1" />

    <TextView
        android:id="@+id/timePromptOp1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/offPink"
        android:text="@string/timePrompt"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/timeViewop1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/event_time_txt"
        android:textSize="25dp"
        android:background="@color/lightPink"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timePromptOp1"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/addressPrompt"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/lightPink"
        android:text="@string/locationPrompt"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/descPrompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePromptOp1" />

    <TextView
        android:id="@+id/addressViewop1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/offPink"
        android:text="@string/eventLocation"
        android:textSize="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addressPrompt"
        app:layout_constraintTop_toBottomOf="@+id/timeViewop1" />

    <TextView
        android:id="@+id/descPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descPrompt"
        android:background="@color/pink"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressViewop1" />

    <TextView
        android:id="@+id/descriptViewop1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_desc_txt"
        android:textSize="20dp"
        android:background="@color/lightPink"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descPrompt" />

    <Button
        android:id="@+id/calbuttonop1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addcalendar"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptViewop1" />
</androidx.constraintlayout.widget.ConstraintLayout>