<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="26dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="10dp"
    android:background="#A1FFEB3B"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:paddingTop="20dp"
        android:text="@string/invite"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        android:textDirection="firstStrong"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/eventNameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/descriptView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:text="@string/detail"
        android:textAlignment="gravity"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/addressView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:text="@string/detail"
        android:textAlignment="gravity"
        android:fontFamily="@font/"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/timeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:text="@string/detail"
        android:textAlignment="gravity"
        android:textSize="24sp" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        android:src="@drawable/summer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#284b63"
            android:layout_weight="1"
            android:text="@string/send" />

        <Button
            android:id="@+id/calButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#284b63"
            android:text="@string/addcalendar" />

    </LinearLayout>

</LinearLayout>